commit al master del blockpost en su version mas reciente

--- a/blockpost.html
+++ b/blockpost.html
@@ -4,7 +4,9 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <h1>Aqui vamos hacer un block post</h1>
-        <p>y este es el parrafo de inicio</p>
+        <div id="container">
+            <h1>Este es el titulo atractivo e intresante de post</h1>
+            <p>y este es el parrafo de inicio en donde vaos a explicar las cosas atractivas que se desarrollaran</p>
+        </div>
     </body>
 </html>
