estructura inicial de la cabecera

--- a/blockpost.html
+++ b/blockpost.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                Cabecera
+            </div>
             <h1>Este es el titulo atractivo e intresante de post</h1>
             <p>y este es el parrafo de inicio en donde vaos a explicar las cosas atractivas que se desarrollaran</p>
         </div>
