Se agrega un parrafo nuevo y se cambia el estilo de la letra

--- a/blockpost.html
+++ b/blockpost.html
@@ -7,6 +7,7 @@
         <div id="container">
             <h1>Este es el titulo atractivo e intresante de post</h1>
             <p>y este es el parrafo de inicio en donde vaos a explicar las cosas atractivas que se desarrollaran</p>
+            <p>Los block son la mejor manera de compartir informacion de tus ideas mucho mas que ir a conferencias o presentaciones por ahora ...</p>
         </div>
     </body>
 </html>
