--- a/blockpost.html
+++ b/blockpost.html
@@ -12,7 +12,7 @@
                 <h1>Este es el titulo atractivo e interesante del post</h1>
                 <p>y este es el parrafo de inicio donde vamos a explicar la cosas increibles que pueden hacer la ramas</p>
                 <p>Los blogs son la mejor forma de compartir informacion y las ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres Rockstar, pero estadisticamente no lo eres .... por ahora ....</p>
-                <p>Suscribete y dale like ...</p>
+                <p>SUSCRIBITE Y DALE LIKE ...</p>
             </div>
         </div>
     </body>
