--- a/blockpost.html
+++ b/blockpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bienvenido a hypelblog</title>
+        <title>Bienvenido a hypelblog 2.0</title>
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
