Color de fondo, logo nuevo y mejor color de header

--- a/blockpost.html
+++ b/blockpost.html
@@ -6,6 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="imagenes/imagen1.png" />
                 Hyperblog <spam id="lagline">Tu blog de CABECERA</spam>
             </div>
             <div id="post">
