--- a/blockpost.html
+++ b/blockpost.html
@@ -11,7 +11,7 @@
             </div>
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
-                <p>y este es el parrafo de inicio donde vamos a explicar la cosas increibles que pueden hacer la ramas</p>
+                <p>y este es el párrafo de inicio donde vamos a explicar la cosas increíbles que pueden hacer la ramas</p>
                 <p>Los blogs son la mejor forma de compartir informacion y las ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres Rockstar, pero estadisticamente no lo eres .... por ahora ....</p>
                 <p>SUSCRIBITE Y DALE LIKE ...</p>
             </div>
