Agrege una imagen al block

--- a/blockpost.html
+++ b/blockpost.html
@@ -12,7 +12,8 @@
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
                 <p>y este es el p&aacute;rrafo de inicio donde vamos a explicar la cosas &iacute;ncreíbles que pueden hacer la ramas</p>
-                <p>Los blogs son la mejor forma de compartir informacion y las ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres Rockstar, pero estadisticamente no lo eres .... por ahora ....</p>
+                <p><img src="imagenes/ImajenAgregada.jpg" width="100%"/></p>
+                <p>Los blogs son la mejor forma de compartir informac&iacute;on y las ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres Rockstar, pero estadisticamente no lo eres .... por ahora ....</p>
                 <p>SUSCRIBITE Y DALE LIKE ...</p>
             </div>
             <div id="footer">
